Prevent canvas width from overflowing container

--- a/app/styles/_containers.scss
+++ b/app/styles/_containers.scss
@@ -1,5 +1,5 @@
 body {
-  max-width: 800px;
+  max-width: $frame-width + ($story-border-width * 2);
   margin: 0 auto;
   padding: 0;
   font-family: 'Roboto Slab', 'Open Sans', sans-serif;
@@ -20,8 +20,8 @@ body {
 .selected-frame,
 .previous-frame {
   // Shrink the displayed width/height canvas by half
-  width: 800px;
-  height: 450px;
+  width: $frame-width;
+  height: $frame-height;
 }
 
 .previous-frame {
