--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,3 +1,8 @@
+$story-border-width: 1px;
+
+$frame-width: 800px;
+$frame-height: 450px;
+
 $panel-position-offset: 15px;
 $panel-background-color: #234;
 
